--- a/exploration/e18_seq2seq_new_201012.ipynb
+++ b/exploration/e18_seq2seq_new_201012.ipynb
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1764,22 +1764,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original: \n",
+      " New Zealand defeated India by 8 wickets in the fourth ODI at Hamilton on Thursday to win their first match of the five-match ODI series. India lost an international match under Rohit Sharma's captaincy after 12 consecutive victories dating back to March 2018. The match witnessed India getting all out for 92, their seventh lowest total in ODI cricket history.\n",
+      "\n",
+      " summarise: \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "''"
+       "'The match witnessed India getting all out for 92, their seventh lowest total in ODI cricket history.'"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summarize(data['text'][2],ratio=0.55)"
+    "print(\"original: \\n\", data['text'][2])\n",
+    "print(\"\\n summarise: \")\n",
+    "summarize(data['text'][2],ratio=0.35)"
    ]
   },
   {
@@ -1788,9 +1800,8 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "- 해당 데이터가 우리가 아는 그런 영어가 아닌 것 같아서 정확도도 좀 떨어지는 것 같다.\n",
-    "- 그러나 해석이 가능한 것들 위주로 보면 완전히 쌩뚱맞게 요약하는 것 같진 않아서 흥미로웠다.\n",
-    "- summa의 경우 아무것도 리턴되지 않아서 확인할 수 없었다."
+    "- 잘 안되는 것도 있지만 완전히 어긋나지는 않아보여서 흥미로웠다.\n",
+    "- summa도 ratio를 조절하면 나름 요약을 잘 해주는 듯 하다."
    ]
   }
  ],
@@ -1799,6 +1810,18 @@
    "display_name": "aiffel",
    "language": "python",
    "name": "aiffel"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
